--- a/cold.ipynb
+++ b/cold.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Pixelate:\n",
-    "    def __init__(self, transforms, n_between):\n",
-    "        self.transforms = transforms\n",
-    "        self.transforms.insert(0, self.set_image_to_random_grey)\n",
+    "    def __init__(self, sizes, n_between):\n",
+    "        \"\"\"Sizes is a list of ints from smallest to largest\"\"\"\n",
+    "        self.transforms = [self.set_image_to_random_grey]\n",
+    "        interpolation = transforms.InterpolationMode.NEAREST\n",
+    "        for size in sizes:\n",
+    "            self.transforms.append(\n",
+    "                transforms.Compose(\n",
+    "                    [\n",
+    "                        transforms.Resize(size, interpolation),\n",
+    "                        transforms.Resize(sizes[-1], interpolation),\n",
+    "                    ]\n",
+    "                )\n",
+    "            )\n",
     "        self.n_between = n_between\n",
-    "        self.n_transforms = len(transforms)\n",
+    "        self.n_transforms = len(self.transforms)\n",
     "        self.T = self.n_transforms + (self.n_transforms - 1) * self.n_between\n",
     "\n",
     "    def seed(self, seed):\n",
@@ -46,33 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "interpolation = transforms.InterpolationMode.NEAREST\n",
-    "scales = [\n",
-    "    transforms.Compose(\n",
-    "        [\n",
-    "            transforms.Resize((8, 8), interpolation),\n",
-    "            transforms.Resize((32, 32), interpolation),\n",
-    "        ]\n",
-    "    ),\n",
-    "    transforms.Compose(\n",
-    "        [\n",
-    "            transforms.Resize((16, 16), interpolation),\n",
-    "            transforms.Resize((32, 32), interpolation),\n",
-    "        ]\n",
-    "    ),\n",
-    "    transforms.Resize((32, 32), interpolation),\n",
-    "]\n",
+    "scales = [8,16,32]\n",
     "N_transitions = 2\n",
     "pixelate = Pixelate(scales, N_transitions)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,14 +93,14 @@
     "    # show images side by side\n",
     "    fig = plt.figure(figsize=(20, 5))\n",
     "    for i, image in enumerate(images):\n",
-    "        ax = fig.add_subplot(1, len(images), i + 1)\n",
+    "        ax = fig.add_subplot(1, len(images), i  + 1)\n",
     "        ax.axis(\"off\")\n",
     "        ax.imshow(image.squeeze(), cmap=\"gray\", vmin=0, vmax=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
