--- a/positional.ipynb
+++ b/positional.ipynb
@@ -2,78 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch"
+    "import torch\n",
+    "import torchvision.transforms as transforms"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_positional_embedding(size, degree):\n",
+    "def get_positional_embedding(x_matrix, y_matrix, degree):\n",
+    "    layers = []\n",
+    "\n",
+    "    for d in range(degree):\n",
+    "        freq = 2**d\n",
+    "        layers.append(torch.sin(freq * x_matrix))\n",
+    "        layers.append(torch.cos(freq * x_matrix))\n",
+    "        layers.append(torch.sin(freq * y_matrix))\n",
+    "        layers.append(torch.cos(freq * y_matrix))\n",
+    "\n",
+    "    return torch.stack(layers, dim=0)\n",
+    "\n",
+    "def get_pixel_coordinates(size):\n",
     "    row = torch.arange(0, size) / (size - 1)\n",
     "    x_matrix = torch.stack([row] * size)\n",
     "    y_matrix = x_matrix.T\n",
-    "    layers = []\n",
-    "\n",
-    "    for d in range(degree + 1):\n",
-    "        layers.append(torch.sin(2**d * x_matrix))\n",
-    "        layers.append(torch.sin(2**d * y_matrix))\n",
-    "\n",
-    "    return torch.stack(layers, dim=0)"
+    "    return x_matrix, y_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "tensor([[[ 0.0000,  0.3272,  0.6184,  0.8415],\n",
-       "         [ 0.0000,  0.3272,  0.6184,  0.8415],\n",
-       "         [ 0.0000,  0.3272,  0.6184,  0.8415],\n",
-       "         [ 0.0000,  0.3272,  0.6184,  0.8415]],\n",
-       "\n",
-       "        [[ 0.0000,  0.0000,  0.0000,  0.0000],\n",
-       "         [ 0.3272,  0.3272,  0.3272,  0.3272],\n",
-       "         [ 0.6184,  0.6184,  0.6184,  0.6184],\n",
-       "         [ 0.8415,  0.8415,  0.8415,  0.8415]],\n",
-       "\n",
-       "        [[ 0.0000,  0.6184,  0.9719,  0.9093],\n",
-       "         [ 0.0000,  0.6184,  0.9719,  0.9093],\n",
-       "         [ 0.0000,  0.6184,  0.9719,  0.9093],\n",
-       "         [ 0.0000,  0.6184,  0.9719,  0.9093]],\n",
-       "\n",
-       "        [[ 0.0000,  0.0000,  0.0000,  0.0000],\n",
-       "         [ 0.6184,  0.6184,  0.6184,  0.6184],\n",
-       "         [ 0.9719,  0.9719,  0.9719,  0.9719],\n",
-       "         [ 0.9093,  0.9093,  0.9093,  0.9093]],\n",
-       "\n",
-       "        [[ 0.0000,  0.9719,  0.4573, -0.7568],\n",
-       "         [ 0.0000,  0.9719,  0.4573, -0.7568],\n",
-       "         [ 0.0000,  0.9719,  0.4573, -0.7568],\n",
-       "         [ 0.0000,  0.9719,  0.4573, -0.7568]],\n",
-       "\n",
-       "        [[ 0.0000,  0.0000,  0.0000,  0.0000],\n",
-       "         [ 0.9719,  0.9719,  0.9719,  0.9719],\n",
-       "         [ 0.4573,  0.4573,  0.4573,  0.4573],\n",
-       "         [-0.7568, -0.7568, -0.7568, -0.7568]]])"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[[0.0000, 0.1429, 0.2857, 0.4286, 0.5714, 0.7143, 0.8571, 1.0000],\n",
+      "          [0.0000, 0.1429, 0.2857, 0.4286, 0.5714, 0.7143, 0.8571, 1.0000],\n",
+      "          [0.0000, 0.1429, 0.2857, 0.4286, 0.5714, 0.7143, 0.8571, 1.0000],\n",
+      "          [0.0000, 0.1429, 0.2857, 0.4286, 0.5714, 0.7143, 0.8571, 1.0000],\n",
+      "          [0.0000, 0.1429, 0.2857, 0.4286, 0.5714, 0.7143, 0.8571, 1.0000],\n",
+      "          [0.0000, 0.1429, 0.2857, 0.4286, 0.5714, 0.7143, 0.8571, 1.0000],\n",
+      "          [0.0000, 0.1429, 0.2857, 0.4286, 0.5714, 0.7143, 0.8571, 1.0000],\n",
+      "          [0.0000, 0.1429, 0.2857, 0.4286, 0.5714, 0.7143, 0.8571, 1.0000]]]])\n",
+      "tensor([[[[0.0000, 0.2857, 0.5714, 0.8571],\n",
+      "          [0.0000, 0.2857, 0.5714, 0.8571],\n",
+      "          [0.0000, 0.2857, 0.5714, 0.8571],\n",
+      "          [0.0000, 0.2857, 0.5714, 0.8571]]]])\n"
+     ]
     }
    ],
    "source": [
-    "get_positional_embedding(4, 2)"
+    "# get_positional_embedding(4, 1)\n",
+    "size = 8\n",
+    "x_matrix, _ = get_pixel_coordinates(size)\n",
+    "x_matrix = x_matrix.unsqueeze(0).unsqueeze(0)\n",
+    "print(x_matrix)\n",
+    "interpolation = transforms.InterpolationMode.NEAREST\n",
+    "resize = transforms.Resize(size // 2, interpolation)\n",
+    "x_matrix = resize(x_matrix)\n",
+    "print(x_matrix)"
    ]
   }
  ],
